--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
   <h2>Register Expense</h2>
   <form id="expense-form">
-    <label>Fecha: <input type="date" name="fecha" required></label><br><br>
-    <label>Categoria: <input type="text" name="categoria" required></label><br><br>
-    <label>Subcategoria: <input type="text" name="subcategoria" required></label><br><br>
-    <label>Monto: <input type="number" step="0.01" name="monto" required></label><br><br>
+    <label>Fecha: <input type="date" name="date" required></label><br><br>
+    <label>Categoria: <input type="text" name="category" required></label><br><br>
+    <label>Subcategoria: <input type="text" name="subcategory" required></label><br><br>
+    <label>Monto: <input type="number" step="0.01" name="amount" required></label><br><br>
     <button type="submit">Submit</button>
   </form>
 
@@ -19,7 +19,7 @@
       e.preventDefault();
       const data = Object.fromEntries(new FormData(form).entries());
 
-      const response = await fetch('https://https://script.google.com/macros/s/AKfycbxNtgdqlYqqMSnyii1Zxka-rh8CFTOvUNjfH0IwHHR4FUquji_kCjRP8QlVwRg6ITMl/exec', {
+      const response = await fetch('https://script.google.com/macros/s/AKfycbyqCCoS08aYmLfUyEmwdXTs2jNEk-QqNNoborHyH1RrSZXzaNGW-8gS6BAEjz8Q74jC/exec', {
         method: 'POST',
         body: JSON.stringify(data),
         headers: {
