--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Expense Form</title>
+  <title>Expense Tracker</title>
 </head>
 <body>
   <h2>Register Expense</h2>
   <form id="expense-form">
-    <label>Fecha: <input type="date" name="date" required></label><br><br>
-    <label>Categoria: <input type="text" name="category" required></label><br><br>
-    <label>Subcategoria: <input type="text" name="subcategory" required></label><br><br>
-    <label>Monto: <input type="number" step="0.01" name="amount" required></label><br><br>
+    <label>Date: <input type="date" name="date" required></label><br><br>
+    <label>Category: <input type="text" name="category" required></label><br><br>
+    <label>Subcategory: <input type="text" name="subcategory" required></label><br><br>
+    <label>Amount: <input type="number" name="amount" step="0.01" required></label><br><br>
     <button type="submit">Submit</button>
   </form>
 
+  <p id="status"></p>
+
   <script>
     const form = document.getElementById('expense-form');
-    form.addEventListener('submit', async function(e) {
+    const status = document.getElementById('status');
+
+    form.addEventListener('submit', async function (e) {
       e.preventDefault();
       const data = Object.fromEntries(new FormData(form).entries());
 
-      const response = await fetch('https://script.google.com/macros/s/AKfycbyqCCoS08aYmLfUyEmwdXTs2jNEk-QqNNoborHyH1RrSZXzaNGW-8gS6BAEjz8Q74jC/exec', {
-        method: 'POST',
-        body: JSON.stringify(data),
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      });
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbyqCCoS08aYmLfUyEmwdXTs2jNEk-QqNNoborHyH1RrSZXzaNGW-8gS6BAEjz8Q74jC/exec', {
+          method: 'POST',
+          body: JSON.stringify(data),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        });
 
-      if (response.ok) {
-        alert("Expense registered successfully!");
-        form.reset();
-      } else {
-        alert("Error submitting the form.");
+        const result = await response.json();
+        if (result.result === 'Success') {
+          status.innerText = "✅ Expense registered successfully!";
+          form.reset();
+        } else {
+          status.innerText = "⚠️ Something went wrong.";
+        }
+      } catch (err) {
+        console.error(err);
+        status.innerText = "❌ Error submitting the form.";
       }
     });
   </script>
