--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       const data = Object.fromEntries(new FormData(form).entries());
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzg0-rVo9FIZhdnCDImDuHXZkCTLU4lu8iOFKsonjhry10-GeIpe0oDfHPTPAiKNKMB/exec', {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbzg0-rVo9FIZhdnCDImDuHXZkCTLU4lu8iOFKsonjhry10-GeIpe0oDfHPTPAiKNKMB/exechttps://script.google.com/macros/s/AKfycbyvvLQaUFoug9gQDAxq520zIFK1yPzoa3nJ5cVPxHpKtjFeygfATp2NsZLXePxtoTqT/exec', {
           method: 'POST',
           body: JSON.stringify(data),
           headers: {
