--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8" />
   <title>Expense Tracker</title>
 </head>
 <body>
   <h2>Register Expense</h2>
   <form id="expense-form">
-    <label>Date: <input type="date" name="date" required></label><br><br>
-    <label>Category: <input type="text" name="category" required></label><br><br>
-    <label>Subcategory: <input type="text" name="subcategory" required></label><br><br>
-    <label>Amount: <input type="number" name="amount" step="0.01" required></label><br><br>
+    <label>Date: <input type="date" name="date" required /></label><br><br>
+    <label>Category: <input type="text" name="category" required /></label><br><br>
+    <label>Subcategory: <input type="text" name="subcategory" required /></label><br><br>
+    <label>Amount: <input type="number" name="amount" step="0.01" required /></label><br><br>
     <button type="submit">Submit</button>
   </form>
 
@@ -24,24 +25,27 @@
       const data = Object.fromEntries(new FormData(form).entries());
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzg0-rVo9FIZhdnCDImDuHXZkCTLU4lu8iOFKsonjhry10-GeIpe0oDfHPTPAiKNKMB/exechttps://script.google.com/macros/s/AKfycbyvvLQaUFoug9gQDAxq520zIFK1yPzoa3nJ5cVPxHpKtjFeygfATp2NsZLXePxtoTqT/exec', {
-          method: 'POST',
-          body: JSON.stringify(data),
-          headers: {
-            'Content-Type': 'application/json'
+        const response = await fetch(
+          'https://script.google.com/macros/s/AKfycbyvvLQaUFoug9gQDAxq520zIFK1yPzoa3nJ5cVPxHpKtjFeygfATp2NsZLXePxtoTqT/exec',
+          {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
           }
-        });
+        );
 
         const result = await response.json();
         if (result.result === 'Success') {
-          status.innerText = "✅ Expense registered successfully!";
+          status.innerText = '✅ Expense registered successfully!';
           form.reset();
         } else {
-          status.innerText = "⚠️ Something went wrong.";
+          status.innerText = '⚠️ Unexpected response.';
         }
-      } catch (err) {
-        console.error(err);
-        status.innerText = "❌ Error submitting the form.";
+      } catch (error) {
+        console.error('❌ Error:', error);
+        status.innerText = '❌ Error submitting the form.';
       }
     });
   </script>
