--- a/index.html
+++ b/index.html
@@ -1,47 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Expense Tracker</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>Register Expense</h2>
-  <form id="expense-form">
-    <label>Date: <input type="date" name="date" required /></label><br><br>
-    <label>Category: <input type="text" name="category" required /></label><br><br>
-    <label>Subcategory: <input type="text" name="subcategory" required /></label><br><br>
-    <label>Amount: <input type="number" name="amount" step="0.01" required /></label><br><br>
-    <button type="submit">Submit</button>
-  </form>
+  <div class="container">
+    <h2>Register Expense</h2>
+    <form id="expense-form">
+      <label for="date">📅 Date</label>
+      <input type="date" name="date" id="date" required />
 
-  <p id="status"></p>
+      <label for="category">📁 Category</label>
+      <input type="text" name="category" id="category" required />
 
-  <script>
-    const form = document.getElementById('expense-form');
-    const status = document.getElementById('status');
+      <label for="subcategory">📂 Subcategory</label>
+      <input type="text" name="subcategory" id="subcategory" required />
 
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const formData = new FormData(form);
+      <label for="amount">💰 Amount</label>
+      <input type="number" name="amount" id="amount" step="0.01" required />
 
-      try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycby3oX9yrnf_bgy4QyxRSWMOq-VT3Vz628kzVKIMku1bvJDc_0iFkhdh0qolx9k81y_7/exec', {
-          method: 'POST',
-          body: new URLSearchParams(formData) // 👈 importante para compatibilidad con Apps Script
-        });
+      <button type="submit">Submit</button>
+    </form>
+    <p id="status"></p>
+  </div>
 
-        const result = await response.json();
-        if (result.result === 'Success') {
-          status.innerText = '✅ Expense registered successfully!';
-          form.reset();
-        } else {
-          status.innerText = '⚠️ Unexpected response.';
-        }
-      } catch (err) {
-        console.error('❌ Error:', err);
-        status.innerText = '❌ Error submitting the form.';
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
