--- a/index.html
+++ b/index.html
@@ -25,55 +25,10 @@
         <option value="cuidado personal">Cuidado Personal</option>
         <option value="regalos">Regalos</option>
       </select>
-
-      <label for="subcategory">📂 Subcategory</label>
-        <select name="subcategory" id="subcategory" required>
+     <label for="subcategory">📂 Subcategory</label>
+      <select name="subcategory" id="subcategory" disabled required>
         <option value="" disabled selected>Select subcategory</option>
-        
-        <!-- Hogar -->
-        <option value="alquiler">Alquiler</option>
-        <option value="telefono">Teléfono</option>
-        <option value="luz">Luz</option>
-        <option value="gas">Gas</option>
-        <option value="agua">Agua</option>
-        <option value="television">Televisión</option>
-        <option value="ABL">ABL</option>
-        <option value="mantenimiento o reparaciones">Mantenimiento o reparaciones</option>
-
-        <!-- Entretenimiento -->
-        <option value="streaming">Streaming</option>
-        <option value="cine">Cine</option>
-        <option value="recitales">Recitales</option>
-        <option value="eventos deportivos">Eventos deportivos</option>
-        <option value="teatro">Teatro</option>
-
-        <!-- Transporte -->
-        <option value="sube">Sube</option>
-        <option value="taxi">Taxi</option>
-        <option value="uber">Uber</option>
-
-        <!-- Tarjetas de crédito -->
-        <option value="personal">Personal</option>
-        <option value="visa">Visa</option>
-        <option value="mastercard">Mastercard</option>
-
-        <!-- Comida -->
-        <option value="alimentos">Alimentos</option>
-        <option value="restaurantes">Restaurantes</option>
-        <option value="pedidos ya/rappi">Pedidos Ya / Rappi</option>
-
-        <!-- Ahorros o inversiones -->
-        <option value="cuenta de inversion">Cuenta de inversión</option>
-        <option value="cuenta de ahorro">Cuenta de ahorro</option>
-        <option value="cuenta de viaje">Cuenta de viaje</option>
-
-        <!-- Cuidado personal -->
-        <option value="salud">Salud</option>
-        <option value="pelo">Pelo</option>
-        <option value="ropa">Ropa</option>
-        <option value="gimnasio">Gimnasio</option>
       </select>
-
 
       <label for="amount">💰 Amount</label>
       <input type="number" name="amount" id="amount" step="0.01" required />
