--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Expense Tracker</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bienvenido</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>Register Expense</h2>
-    <form id="expense-form">
-      <label for="date">📅 Date</label>
-      <input type="date" name="date" id="date" required />
+<div class="container">
+  <h2>Bienvenido</h2>
+  <div class="welcome-buttons">
+    <a href="form.html" class="btn-danger">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+      </svg>
+      <span>Registrar un gasto</span>
+    </a>
 
-     <label for="category">📁 Category</label>
-      <select name="category" id="category" required>
-        <option value="" disabled selected>Select category</option>
-        <option value="hogar">Hogar</option>
-        <option value="entretenimiento">Entretenimiento</option>
-        <option value="transporte">Transporte</option>
-        <option value="tarjetas de credito">Tarjetas de Crédito</option>
-        <option value="comida">Comida</option>
-        <option value="ahorros o inversiones">Ahorros o Inversiones</option>
-        <option value="cuidado personal">Cuidado Personal</option>
-        <option value="regalos">Regalos</option>
-      </select>
-     <label for="subcategory">📂 Subcategory</label>
-      <select name="subcategory" id="subcategory" disabled required>
-        <option value="" disabled selected>Select subcategory</option>
-      </select>
-
-      <label for="amount">💰 Amount</label>
-      <input type="number" name="amount" id="amount" step="0.01" required />
-
-      <button type="submit">Submit</button>
-    </form>
-    <p id="status"></p>
+    <a href="view.html" class="btn-main">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M2 2h12v2H2V2zm0 4h12v2H2V6zm0 4h12v2H2v-2z"/>
+      </svg>
+      <span>Consultar mis gastos</span>
+    </a>
   </div>
-
-  <script src="script.js"></script>
+</div>
 </body>
 </html>
