Fix reset button id and add table container class

--- a/view.html
+++ b/view.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div id="expenses-table-container"></div>
+    <div id="expenses-table-container" class="table-container"></div>
 
     <div class="form-buttons">
       <a href="index.html" class="btn-secondary" id="back-button">Volver</a>
