--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
 
       <div class="form-buttons">
         <button type="submit" class="btn-main">Guardar</button>
-        <button type="button" id="reset-button" class="btn-danger">Reset</button>
+        <button type="button" id="reset-btn" class="btn-danger">Reset</button>
         <a href="index.html" class="btn-secondary">Volver</a>
       </div>
     </form>
