--- a/view.html
+++ b/view.html
@@ -41,26 +41,12 @@
     <div id="expenses-table-container" class="table-container"></div>
 
     <!-- Sección de Totales -->
-    <div id="totals-section" style="display: none;">
+    <div id="totals-section" class="totals-section" style="display: none;">
       <div class="totals-grid-layout">
-        <!-- Totales por categoría -->
-        <div class="table-zone">
-          <h4>Totales por Categoría</h4>
-          <div id="category-total-container"></div>
-        </div>
-
-        <!-- Totales por subcategoría -->
-        <div class="table-zone">
-          <h4>Totales por Subcategoría</h4>
-          <div id="subcategory-total-container"></div>
-        </div>
+        <div class="table-zone" id="category-total-container"></div>
+        <div class="table-zone" id="subcategory-total-container"></div>
       </div>
-
-      <!-- Total mensual -->
-      <div class="monthly-total">
-        <h4>Total mensual</h4>
-        <div id="monthly-total-container"></div>
-      </div>
+      <div class="monthly-total" id="monthly-total-container"></div>
     </div>
 
     <!-- Botón volver -->
